Fri Mar 21 09:24:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (open_for_install): write block result and rewrite only
	  if changed from existing file.

Fri Mar 21 08:29:33 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_to_f): rearrangement.

Fri Mar 21 06:44:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (nurat_to_f): C99.

Fri Mar 21 01:40:27 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* complex.c (nucomp_sub, nucomp_expt): call corresponding functions.

Fri Mar 21 01:21:43 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* missing/tgamma.c: include config.h before math.h.  [ruby-dev:34075]

Thu Mar 20 21:46:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_getline): use receiver.

Thu Mar 20 21:20:19 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: some improvements (include Shin-ichiro HARA's
	  effort).

	* complex.c: some improvemtns.

	* test/ruby/test_rational2.rb: new.

Thu Mar 20 00:21:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_initialize_copy): get rid of segfault.

	* io.c (argf_tell, argf_seek_m, argf_set_pos, argf_rewind,
	  argf_fileno, argf_to_io, argf_eofl, argf_getc, argf_getbyte,
	  argf_readchar, argf_readbyte, argf_each_line): use receiver.

Wed Mar 19 23:52:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_putc, rb_io_puts): ouput directly if the reciever is
	  rb_stdout to get rid of infinite recursion.  [ruby-dev:34059]

Wed Mar 19 22:27:41 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: added rb_gcd.

	* complex.c: use rb_gcd.

Wed Mar 19 18:37:00 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: revert.

	* rational.c: revert.

Wed Mar 19 17:31:20 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval_intern.h (TH_EXEC_TAG): need not to FLUSH_REGISTER_WINDOWS.
	  [ruby-core:15871], [ruby-dev:34088]

Wed Mar 19 14:53:03 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_to_s, nucomp_inspect): get rid of making